# le_mots

./: .gitignore  CMakeLists.txt  CMakeLists.txt.save  README.md  cMakeLists.txt  dbexport.sql  le_mots_database.sql  main.cpp
client/: .gitignore  CMakeLists.txt  main.cpp
client/asio-client/: a.out  client.cpp  client.h  test_client.cpp
client/client_lib/: CMakeLists.txt
client/client_lib/includes/: client.h  clientmanager.h  command.h  player.h  profile.h  room.h
client/client_lib/src/: client.cpp  clientmanager.cpp  command.cpp  player.cpp
client/client_lib/tests/: test_room.cpp
client/client_libO/includes/: command.h
client/client_libO/src/: command.cpp  profile.cpp
client/creator_of_room/: creator_of_room.h  test_creator.cpp
client/graphics/: CMakeLists.txt  graphics.pro  iwiringview.h  loginform.cpp  loginform.h  loginform.ui  main.cpp  menu.ui  menuform.cpp  menuform.h  player.cpp  player.h  playerpresenter.cpp  playerpresenter.h  regform.cpp  regform.h  regform.ui  wordsform.cpp  wordsform.h  wordsform.ui
client/graphics_lib/: CMakeLists.txt
client/graphics_lib/forms/: loginform.ui  menu.ui  roomform.ui  wordsform.ui
client/graphics_lib/include/: loginform.h  menuform.h  player.h  playerpresenter.h  regform.h  roomform.h  waitingform.h  wordsform.h
client/graphics_lib/src/: loginform.cpp  menuform.cpp  player.cpp  playerpresenter.cpp  regform.cpp  regform.ui  roomform.cpp  roomform.ui  waitingform.ui  waitinhgform.cpp  wordsform.cpp  wordsform.ui
client/player/: player.h  test_player.cpp
client/room/: room.h
graphics/: CMakeLists.txt  button.cpp  button.h  graphics.pro  iwiringview.h  loginform.cpp  loginform.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  menuform.cpp  menuform.h  player.cpp  player.h  playerpresenter.cpp  playerpresenter.h  regform.cpp  regform.h  wordsform.cpp  wordsform.h
graphics/ScreenWidgets/: authwidget.cpp  authwidget.h  authwidget.h.autosave  basewidget.h  loginwidget.cpp  loginwidget.h  menuwidget.h  prepgamewidget.cpp  prepgamewidget.h
server/: .gitignore  CMakeLists.txt  CMakeLists.txt.save  le_mots_database.sql  main.cpp
server/asio-server/: a.out  server.cpp  server.h
server/command/: command.cpp  command.h
server/creator_of_room/: creator_of_room.h  test_creator.cpp
server/database/: CMakeLists.txt  base.h  test_base.cpp
server/database/connect/: connect.cpp  connect.h
server/database/models/: user.cpp  user.h  word.cpp  word.h
server/database/modelsO/: user.h  word.h
server/databaseS/: CMakeLists.txt
server/databaseS/models/: user.cpp  word.cpp
server/game/: game.cpp  game.h
server/game_manager/: game_manager.cpp  game_manager.h  test_game.cpp
server/logic/: CMakeLists.txt
server/logic/game_manager/: CMakeLists.txt  game_manager.cpp  game_manager.h  test_game.cpp
server/logic/game_managerO/: game_manager.h
server/logic/player/: player.cpp  player.h  test_player.cpp
server/logic/playerO/: player.cpp
server/logic/room/: room.cpp  room.h
server/logic/roomO/: room.cpp  room.h  test_room.cpp
server/logic/room_for_grebeshok/: room_grebeshok.h  test_grebeshok.cpp
server/logic/room_for_one_letter/: room_one_letter.h  test_one_letter.cpp
server/logic/room_for_words/: room_words.h  test_words.cpp
server/logicS/: CMakeLists.txt
server/logicS/game_manager/: game_manager.cpp  game_manager.h
server/logicS/player/: player.h
server/logicS/room/: room.h
server/player/: player.cpp  player.h  test_player.cpp
server/room/: room.h  test_room.cpp
server/server_lib/: CMakeLists.txt
server/server_lib/includes/: command.h  connection.h
server/server_lib/src/: command.cpp  connection.cpp  server.cpp
server/server_lib/tests/: test_server.cpp
server/server_libO/includes/: command.h  server.h
server/server_libO/src/: command.cpp  connection.cpp
server/server_libO/tests/: test_server.cpp
